<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">逗逼卫士</string>
    <string name="action_settings">Settings</string>
<<<<<<< a85ebdb4ce72494761159c4ab03551e2f8835d3c
 	<string name="app_main">主界面</string>
 	<string name="safe">逗逼防盗</string>
 	<string name="setting_password">设置密码</string>
 	<string name="input_password">输入密码</string>
 	<string name="confim">确认</string>
 	<string name="cancel">取消</string>
 	<string name="et_password">请输入密码</string>
 	<string name="et_passwordconfim">请再次输入密码</string>
 	<string name="home_marquee">逗逼卫士哪家强，山东济南找蓝翔，双杀，三杀，四杀，五杀，带你超神，带你装逼带你飞。</string>
 	<string name="setup1_title">1.欢迎使用逗逼防盗</string>
 	<string name="setup2_title">2,手机卡绑定</string>
 	<string name="setup3_title">3,设置安全号码</string>
 	<string name="setup4_title">4,恭喜您设置完成</string>
 	<string name="next">下一步</string>
 	<string name="prev">上一步</string>
 	<string name="setup2_send">通过绑定sim卡:\n下次重启手机，如果sim不一致，就会给安全号码发短信"</string>
 	<string name="setup2_isbindsim">点击绑定/解绑sim卡</string>
 	<string name="setup3_sendtophone">sim卡如果发送变化:\n报警短信就会给安全号码</string>
 	<string name="setup3_selectphone">选择安全号码</string>
 	<string name="setup4_isprotected">防盗保护是否开启</string>
 	<string name="setup4_protected">防盗保护已经开启</string>
 	<string name="setup4_setted">设置完成</string>
 	<string name="safeisstart">防盗保护是否开启:</string>
 	<string name="simring">Sim卡变更报警</string>
 	<string name="gps">GPS追踪:#*gps*#</string>
 	<string name="gpssetup1">GPS追踪</string>
 	<string name="wipedata">远程清除数据:#*wipedata*#</string>
 	<string name="wipedatasetup1">远程清除数据</string>
 	<string name="lockscreen">远程锁屏:#*lockscreen*#</string> 	
 	<string name="lockscreensetup1">远程锁屏</string> 	
 	<string name="music">播放报警音乐:#*music*#</string> 	
 	<string name="mymobliesafe">您的手机防盗卫士:</string> 	
 	<string name="reenter_setup">是否重新进入设置向导界面</string>
</resources>
=======
    <string name="app_main">主界面</string>
    <string name="safe">逗逼防盗</string>
    <string name="setting_password">设置密码</string>
    <string name="input_password">输入密码</string>
    <string name="confim">确认</string>
    <string name="cancel">取消</string>
    <string name="et_password">请输入密码</string>
    <string name="et_passwordconfim">请再次输入密码</string>
    <string name="home_marquee">逗逼卫士哪家强，山东济南找蓝翔，双杀，三杀，四杀，五杀，带你超神，带你装逼带你飞。</string>
    <string name="setup1_title">1.欢迎使用逗逼防盗</string>
    <string name="setup2_title">2,手机卡绑定</string>
    <string name="setup3_title">3,设置安全号码</string>
    <string name="setup4_title">4,恭喜您设置完成</string>
    <string name="next">下一步</string>
    <string name="prev">上一步</string>
    <string name="setup2_send">通过绑定sim卡:\n下次重启手机，如果sim不一致，就会给安全号码发短信"</string>
    <string name="setup2_isbindsim">点击绑定/解绑sim卡</string>
    <string name="setup3_sendtophone">sim卡如果发送变化:\n报警短信就会给安全号码</string>
    <string name="setup3_selectphone">选择安全号码</string>
    <string name="setup4_isprotected">防盗保护是否开启</string>
    <string name="setup4_protected">防盗保护已经开启</string>
    <string name="setup4_setted">设置完成</string>
    <string name="safeisstart">防盗保护是否开启:</string>
    <string name="simring">Sim卡变更报警</string>
    <string name="gps">GPS追踪:#*gps*#</string>
    <string name="gpssetup1">GPS追踪</string>
    <string name="wipedata">远程清除数据:#*wipedata*#</string>
    <string name="wipedatasetup1">远程清除数据</string>
    <string name="lockscreen">远程锁屏:#*lockscreen*#</string>
    <string name="lockscreensetup1">远程锁屏</string>
    <string name="music">播放报警音乐:#*music*#</string>
    <string name="mymobliesafe">您的手机防盗卫士:</string>
    <string name="reenter_setup">是否重新进入设置向导界面</string>
    <string name="safe_number">安全号码</string>
    <string name="function">功能简介</string>
    <string name="sample_device_admin_description">开启设备管理员</string>
    <string name="activity_sample_device_admin">设备管理员</string>
    <string name="sample_device_admin">管理员</string>
    <string name="setting_center">设置中心</string>

</resources>
>>>>>>> 第四次提交 手机防盗功能完成
