<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        style="@style/tv_title"
        android:text="@string/setup1_title"
        />
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mymobliesafe" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:gravity="center_vertical"
        android:text="@string/simring"
        android:textSize="18sp" />
    
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:gravity="center_vertical"
        android:text="@string/gpssetup1"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:gravity="center_vertical"
        android:text="@string/lockscreensetup1"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:gravity="center_vertical"
        android:text="@string/wipedatasetup1"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <View
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:background="@android:drawable/presence_online" />

        <View
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:background="@android:drawable/presence_invisible" />

        <View
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:background="@android:drawable/presence_invisible" />

        <View
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:background="@android:drawable/presence_invisible" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/setup1" />

        <Button
            android:onClick="next"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_selector"
            android:text="@string/next" />
    </RelativeLayout>
</LinearLayout>
