<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/tv_title"
        android:text="@string/setup3_title" />

    <TextView
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup3_sendtophone" />

    <EditText
        android:inputType="phone"
        android:id="@+id/et_setup3_safenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
           
            android:onClick="selectSafeNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_selector"
            android:text="@string/setup3_selectphone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <View
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:background="@android:drawable/presence_invisible" />


        <View
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:background="@android:drawable/presence_invisible" />
        <View
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:background="@android:drawable/presence_online" />

        <View
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:background="@android:drawable/presence_invisible" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/phone" />

        <Button
            android:onClick="next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/bt_selector"
            android:text="@string/next" />

        <Button
            android:onClick="prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/bt_selector"
            android:text="@string/prev" />
    </RelativeLayout>

</LinearLayout>