<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/tv_title"
        android:text="@string/setup4_title" />

    <CheckBox
        android:id="@+id/cb_setup4_isprotected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup4_isprotected" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <View
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:background="@android:drawable/presence_invisible" />

        <View
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:background="@android:drawable/presence_invisible" />

        <View
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:background="@android:drawable/presence_invisible" />

        <View
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:background="@android:drawable/presence_online" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/phone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/bt_selector"
            android:onClick="next"
            android:text="@string/setup4_setted" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/bt_selector"
            android:onClick="prev"
            android:text="@string/prev" />
    </RelativeLayout>

</LinearLayout>